Updated Adsense tag properly

--- a/omnivorous-tech/index.html
+++ b/omnivorous-tech/index.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>omnivorous-tech</title>
+    <script>
     (adsbygoogle = window.adsbygoogle || []).push({
       google_ad_client: "ca-pub-5582851885579443",
       enable_page_level_ads: true
     });
+    </script>
   </head>
   <body>
     <div id="app"></div>
